Replace List.of to Arrays.asList